Add special areas

--- a/Document/HerringSummary.sty
+++ b/Document/HerringSummary.sty
@@ -114,8 +114,9 @@ Matthew Grinnell%
 % Message
 \hrule
 \begin{description}
-\item[Disclaimer] This report contains preliminary data collected for \fishName{} in \thisYr{} in the \regionName{} \regionType{} stock assessment regions (SAR).
+\item[Disclaimer] This report contains preliminary data collected for \fishName{} in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR).
 These data may differ from data used and presented in the final stock assessment.
+\iftoggle{specialRegion}{\specialRegion{}}{\unskip}
 \isSubset{}
 \end{description}
 \hrule
