--- a/DataSummary.rnw
+++ b/DataSummary.rnw
@@ -39,8 +39,9 @@
 <<loadImage, echo=FALSE, warning=FALSE>>=
 # Load packages
 require( knitr, quietly=TRUE )  # Dynamic documents
-# Select region(s)/folder(s): major (HG, PRD, CC, SoG, WCVI); or minor (A27, A2W)
-if( !exists('regName') )  regName <- "SoG"
+# Select region(s)/folder(s): major (HG, PRD, CC, SoG, WCVI); minor (A27, A2W);
+# special (A10, JS); or all (All)
+if( !exists('regName') )  regName <- "A10"
 # Set the path to the R output, including a trailing separator
 rPath <- file.path( "..", "DataSummaries", regName, .Platform$file.sep )
 # Load the R image
@@ -153,7 +154,8 @@ The following observations were reported by area DFO Resource Management staff, 
 
 \begin{table}[ht]
 \centering
-\caption{\fishName{} stock assessment regions (SARs) in British Columbia.} 
+\caption{\fishName{} stock assessment regions (SARs) in British Columbia.
+\specialRegion{}} 
 \begin{tabular}{lll}
 \toprule
 \inputsp{\Sexpr{noquote(rPath)}Regions.tex}
