--- a/Document/Variables.rnw
+++ b/Document/Variables.rnw
@@ -10,6 +10,7 @@
 \newcommand{\histYrs}{\Sexpr{histYrs}}
 \newcommand{\histRat}{\Sexpr{histRat}}
 \newcommand{\fixYrs}{\Sexpr{fixYrs}}
+\newcommand{\sectionsJS}{\Sexpr{sectionsJS}}
 
 % Note if there is only a subset of sections
 \newcommand{\isSubset}{\Sexpr{ifelse(all(is.na(sectionSub)), "", paste("Note that this report contains data collected in a subset of the SAR; included sections are ", PasteNicely(sectionSub), ".", sep=""))}}
@@ -58,17 +59,24 @@
 \newcommand{\pctChange}[1]{Percent change is $\delta_t=\frac{\alpha_t - \alpha_{t-1}}{\alpha_{t-1}}$ where $\alpha_t$ is the #1 in year $t$.}
 \newcommand{\spawnSurfDive}{Note that spawn surveys in the dive survey period (\Sexpr{qYrs$q2}) are a combination of surface and dive surveys (Figures \ref{figSpawnIndexType} and \ref{figSpawnTypeProp}).}
 \newcommand{\covid}{\section{COVID-19 pandemic}
+\subsection{Data collection and analysis in 2020}
 The COVID-19 pandemic impacted our ability to collect and analyse Pacific Herring data throughout British Columbia in 2020.
 The pandemic and associated provincial response changed rapidly during the Pacific Herring field program season.
 Despite these challenges, surveyors assessed all major observed spawns in the \Sexpr{length(allRegions$major)} major stock assessment regions (SARs).
 However, these changes impacted our ability to assess spawn in SARs with later spawns more than SARs with earlier spawns.
 For example, spawns were surveyed by surface surveys instead of underwater dive surveys in Prince Rupert District and Haida Gwaii.\par
 Although Pacific Herring biological samples were collected as usual, the pandemic delayed the analysis of biological data for all SARs.
-This delay is most notable for age data which are analysed at the sclerochronology lab at the Pacific Biological Station.
+This delay was most notable for age data which are analysed at the sclerochronology lab at the Pacific Biological Station.
 This lab closed on March \nth{16}, and resumed limited ageing analysis on July \nth{6}.
-This has resulted in delayed provision of age data for Pacific Herring and many other species.
-To address this backlog efficiently, senior science staff and fisheries managers at DFO prioritized species to analyse in the sclerochronology lab.\par
-We now have biological data for Pacific Herring in 2020.
-This updated version of the report contains biological data that was absent from the previous version.
-We appreciate your patience and understanding as we continue to work from home in these uncertain and changing times.}
+This resulted in delayed provision of age data for Pacific Herring and many other species.
+Despite these delays, biological data was available for use in the 2020 stock assessment.
+% To address this backlog efficiently, senior science staff and fisheries managers at DFO prioritized species to analyse in the sclerochronology lab.\par
+% We now have biological data for Pacific Herring in 2020.
+% This updated version of the report contains biological data that was absent from the previous version.
+% We appreciate your patience and understanding as we continue to work from home in these uncertain and changing times.
+\subsection{Data collection and analysis in 2021}
+Compared to 2020, the COVID-19 pandemic had fewer impacts to Pacific Herring data collection and analysis in 2021.
+Spawn surveys proceeded as usual in most areas, with dive surveys in all major areas except Haida Gwaii.
+Haida Gwaii would normally have a dive survey, but had surface surveys in 2021 due to COVID-19.
+The collection and analysis of biological data was not affected by the COVID-19 pandemic in 2021.}
 \newcommand{\specialRegion}{Note that special SARs are unofficial SARs; they are excluded in regular monitoring and analyses.}
