--- a/RegionalText/2021/A27/DataCollectionPrograms.tex
+++ b/RegionalText/2021/A27/DataCollectionPrograms.tex
@@ -1,1 +1,7 @@
-No observations for \thisYr{}.
+The "Seaveyor" surveyed the area March \nth{14} to March \nth{16}.
+Survey effort was concentrated in Section 273, and
+identification of spawning events relied largely on communication
+from local residents to the DFO Resource Manager.
+The spawn dive survey in Statistical Area 27 found spawn
+running along the east shore of Forward Inlet.
+The survey team scouted the rest of the area, but found no other spawn.
