--- a/RegionalText/2021/A27/GeneralObservations.tex
+++ b/RegionalText/2021/A27/GeneralObservations.tex
@@ -1,3 +1,4 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+\item Spawn reported by Quatsino First Nation on March \nth{4}.
+\item Dive survey of spawn completed by shore based dive team.
 \end{itemize}
