--- a/RegionalText/2021/A2W/GeneralObservations.tex
+++ b/RegionalText/2021/A2W/GeneralObservations.tex
@@ -1,3 +1,15 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+\item Despite very poor weather conditions in Area 2W
+during both the test seine charter and spawn surface survey,
+the primary stock assessment goals were achieved.
+\item Despite observations of herring aggregations throughout Port Louis
+all of the observed spawning seemed to be limited to Otard Bay.
+This was thought to be due to prevailing strong westerly winds and
+a resulting large swell into much of Port Louis.
+The spawn in Otard Bay was very heavy and observations suggested
+that all of the herring in the area had spawned there.
+\item No other spawns were observed in Area 2W other than
+amounts of trace spawn at the head of Kano Inlet and a small spot spawn in Dawson Inlet.
+\item There was a large abundance of both Stellars and California Sea Lions
+as well as several Humpback whales in the Port Louis area in 2021. 
 \end{itemize}
