--- a/RegionalText/2021/CC/DataCollectionPrograms.tex
+++ b/RegionalText/2021/CC/DataCollectionPrograms.tex
@@ -1,1 +1,18 @@
-No observations for \thisYr{}.
+The data collection program in the Central Coast reflected a number of
+collaborations between DFO, the Heiltsuk Nation, and the Herring Industry.
+Biological samples were collected by the seine test charter vessel "Ocean Venture"
+for 22 days from March 16th to April 6th.
+The primary purpose of the test charter vessel was to collect biological samples
+from main bodies of herring in Statistical Areas 06, 07, and 08, identified from soundings.
+Heiltsuk or Kitasoo collected 12 nearshore cast net herring samples in 2021.
+Herring spawn locations were primarily identified with fixed-wing overflights.
+Eight spawn flights were conducted this season, in late March and early April.
+Two dive charter vessels operated in the CC:
+\begin{itemize}
+\item The "Pachena No.1" surveyed 21 days from April 6nd to April 26th, and
+\item The "Ocean Cloud" surveyed 12 days from April 3rd to April 14th.
+\end{itemize}
+Five gillnet sounding vessels were operated by the Heiltsuk Nation this season;
+most effort was focused in Statistical Area 07, as well as
+effort in Statistical Area 08 to assist in locating fish
+for spawn on kelp (SOK) operations.
