--- a/RegionalText/2021/CC/GeneralObservations.tex
+++ b/RegionalText/2021/CC/GeneralObservations.tex
@@ -1,3 +1,21 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+\item Herring behaviour different than previous seasons;
+spawn in different areas and apparent lower amount of spawn in Spiller Channel.
+However, the dive survey indicated only slightly less than observed.
+\item Cold weather, colder surface water temperatures noted.
+\item It is extremely difficult to run a herring program without
+sufficient presence of staff in the field.
+\item It is next to impossible to run an effective herring program
+in Central Coast without reliable communications.
+\item Use of DFO radio network was severely restricted just as herring season started,
+resulting in no communication between gillnet vessels and DFO,
+and very limited communications with the herring test boat.
+\item Satellite phone service is not consistent to rely upon at all times.
+\item The overall quality of the program suffered due to these two issues.
+\item Challenges for 2022:
+\begin{itemize}
+\item Establish new communications methods prior to 2022 season.
+\item Re-establish DFO field presence on management platform,
+and Heiltsuk/DFO presence on spawn flights.
+\end{itemize}
 \end{itemize}
