--- a/RegionalText/2021/HG/GeneralObservations.tex
+++ b/RegionalText/2021/HG/GeneralObservations.tex
@@ -1,3 +1,18 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+\item Because of continuing COVID-19 constraints,
+the dive survey was replaced with a surface survey, and
+the seine charter was extended by three days to enhance coverage.
+\item The spawn reconnaissance charter was completed by the Haida Fisheries Program.
+\item All major observed spawns were surveyed by MV Victoria Rose
+using a towed video camera along transects to determine spawn extent and intensity.
+These towed video camera transects were effective for spawn assessments, and
+may prove useful to supplement future dive surveys.
+\item The largest concentrations of spawning occurred around Burnaby Island
+as well as the southern and western shores of Skincuttle Inlet and
+there were no spawns observed in Juan Perez Sound or Louscoone Inlet.
+\item Although the linear extent of spawn was greater than recent years
+it appeared to be lighter and less extensive than 2020.
+\item As in previous years, the seine test encountered Humpback Whales feeding on herring.
+There appears to have been an increase in the number of Grey Whales
+feeding on herring spawn over the past five years.
 \end{itemize}
