--- a/RegionalText/2021/PRD/GeneralObservations.tex
+++ b/RegionalText/2021/PRD/GeneralObservations.tex
@@ -1,3 +1,22 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+\item Continued COVID-19 precautions meant NC Resource Management staff were
+not able to be on-grounds during the assessment activities.
+\item High winds and inclement weather throughout the test fishery were a challenge for charter operators.
+\item Large bodies of fish were observed in Kitkatla Inlet, but
+moved out and no spawn was observed in the typical locations at the top of the inlet.
+\item A significant spawn occurred on the outside of Kitkatla Inlet
+towards Joachim point and in front of Kitkatla Village.
+\item Water sea surface temperatures were similar to last year (5 to 6 degrees) and colder than recent years.
+\item Initial spawn occurred later than the last few years possibly due to the colder water temperatures.
+\item Egg deposition was better than average throughout both assessment areas.
+\item Collaboration on spawn surveys with local First Nations fishery programs
+greatly increased the capacity to assess the areas.
+
+\item Spawning was later due poor weather conditions and colder water temperatures.
+\item Spawn occurred simultaneously throughout the assessment area.
+\item Overall length of spawn was below average.
+\item Good layers (6 to 8) observed from Big Bay south to Ryan Pt.
+\item No spawning observed at the north end of Porcher or Tugwell Island.
+\item Due to the lateness of the spawn, Lax Kw’alaams and Metlakatla
+were key in mapping and recording spawn for dive platform
 \end{itemize}
