--- a/RegionalText/2021/SoG/DataCollectionPrograms.tex
+++ b/RegionalText/2021/SoG/DataCollectionPrograms.tex
@@ -1,1 +1,25 @@
-No observations for \thisYr{}.
+Biological samples were collected by the seine charter vessel "Denman Isle"
+for 27 days from February \nth{20} to March \nth{20}.
+Four additional Industry test vessels collected biological samples
+between February \nth{24} to March \nth{10}.
+The primary purpose of the test charter vessel was to
+collect biological samples from main aggregations of herring in the SoG,
+as identified from soundings within the SAR boudary. 
+
+Herring spawn locations were primarily identified with fixed-wing overflights
+conducted by DFO Resource Management area and Science staff.
+Seventeen flights were conducted this season, between February and March.
+
+Four dive charter vessels operated in the SoG:
+\begin{itemize}
+\item The "Viking Spirit" surveyed 21 days from March \nth{16} to April \nth{5},
+\item The "Ocean Cloud" surveyed 12 days from March \nth{15} to March \nth{26},
+\item The "Seaveyor" surveyed 3 days from March \nth{11} and March \nth{13}, and
+\item A-Tlegay divers surveyed 5 days from March \nth{10} to April \nth{23}.
+\end{itemize}
+The first three dive vessels and the seine charter vessel "Denman Isle"
+were funded by DFO, through a contract to the Herring Conservation Research Society.
+DFO mentored A-Tlegay divers for the spawn survey protocol in 2017 and 2019;
+in 2021, A-Tlegay divers surveyed spawn through a contract with the DFO.
+Additional sampling and sounding efforts conducted through the
+Industry Test Program were contributed in-kind by the Herring Industry.
