--- a/RegionalText/2021/SoG/GeneralObservations.tex
+++ b/RegionalText/2021/SoG/GeneralObservations.tex
@@ -1,3 +1,18 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+\item Late February and early March were subject to strong gale and storm force winds
+which impacted the effectiveness of the assessment program.
+\item Spawn in the Strait of Georgia was observed along a large portion
+of the east coast of Vancouver Island from Willow Point to Piper’s Lagoon and
+along the east side of Denman and Hornby Islands.
+\item Additional spawn was reported in Areas 15, 16 and 17 south of Dodd (Bugoyne Bay).
+\item Overall spawn and fishery timing was average to late in 2021.
+\item Spawn occurred simultaneously in the north and south of the Strait of Georgia major stock area.
+\item The majority of spawning occurred after multiple days of high winds and rough seas;
+beginning on March \nth{9} and ending around March \nth{15}.
+Of note was the distribution of spawn further north than recent years to Willow Point
+as well as some distribution south into Pipers Lagoon in the Nanaimo area.
+\item The overall length of spawn observed during the flight program was
+above average when compared with recent years.
+\item The sea lion population in the Strait of Georgia during the herring season
+continues to impact the ability to obtain biological samples in some areas and times.
 \end{itemize}
