--- a/RegionalText/2021/WCVI/DataCollectionPrograms.tex
+++ b/RegionalText/2021/WCVI/DataCollectionPrograms.tex
@@ -1,1 +1,19 @@
-No observations for \thisYr{}.
+Biological samples were collected by the seine charter vessel "Proud Canadian"
+for 21 days from February \nth{20} to March \nth{12}.
+The primary purpose of the test charter vessel was to collect biological samples from
+main bodies of herring from Statistical Areas 23, 24, and 25.
+Nearshore herring samples were collected by the Nuu-chah-nulth staff
+as part of a sampling program and on-going collaboration between WCVI First Nations and DFO.
+These nearshore biological samples were collected from spawning aggregations using cast nets.
+WCVI First Nations spawn reconnaissance charters reported spawn activity in all three areas.
+Herring spawn locations were primarily identified with fixed-wing overflights conducted by
+DFO Resource Management Area staff.
+Thirteen flights were conducted this season in February and March.
+
+Two dive charter vessels operated in WCVI:
+\begin{itemize}
+\item? The "Pachena No.1" surveyed 15 days from March \nth{18} to April \nth{1}, and
+\item? The "Seaveyor" surveyed 10 days from March \nth{20} to April \nth{3}.
+\end{itemize}
+The seine test charter vessel and the dive survey vessels were funded by DFO,
+through a contract to the Herring Conservation Research Society.
