--- a/RegionalText/2021/WCVI/GeneralObservations.tex
+++ b/RegionalText/2021/WCVI/GeneralObservations.tex
@@ -1,3 +1,9 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+\item First Nation charters worked effectively and test samples were taken from Areas 23, 24 and 25.
+\item Supplemental funding from the Bligh Island environmental response was available for extending reconnaissance flights.
+\item Inclement weather interfered with overflights as well as test vessel operations.
+\item Major spawns occurred later and were during a shorter time window.
+\item Colder water temperatures than previous season.
+\item No assessment on late spawn at Maquinna to Bajo that occurred April \nth{1}.
+\item Grey Whales were observed in lower numbers on the WCVI until later in March.
 \end{itemize}
