--- a/RegionalText/2021/PRD/DataCollectionPrograms.tex
+++ b/RegionalText/2021/PRD/DataCollectionPrograms.tex
@@ -1,1 +1,9 @@
-No observations for \thisYr{}.
+In 2021, biological samples were collected by two seine test vessels:
+\begin{itemize}
+\item The "Nita Maria" collected samples in Big Bay for 13 days from March \nth{15} to March \nth{27}, and
+\item? The "Viking Leader" collected samples in Kitkatla for 13 days from March \nth{16} to March \nth{28}.
+\end{itemize}
+The primary purpose of the test charter vessels was to collect biological samples
+from main bodies of herring from Big Bay and Kitkatla, identified from soundings.
+The dive charter vessel "Royal Pride" surveyed spawn for 20 days from April \nth{7} to April \nth{26}.
+All three charter vessels were funded by DFO, through a contract to the Herring Conservation Research Society.
