--- a/RegionalText/2021/PRD/GeneralObservations.tex
+++ b/RegionalText/2021/PRD/GeneralObservations.tex
@@ -17,6 +17,6 @@ greatly increased the capacity to assess the areas.
 \item Overall length of spawn was below average.
 \item Good layers (6 to 8) observed from Big Bay south to Ryan Pt.
 \item No spawning observed at the north end of Porcher or Tugwell Island.
-\item Due to the lateness of the spawn, Lax Kw’alaams and Metlakatla
-were key in mapping and recording spawn for dive platform
+\item Due to the late spawn,
+Lax Kw'alaams and Metlakatla were key in mapping and recording spawn for dives.
 \end{itemize}
