--- a/RegionalText/2021/SoG/GeneralObservations.tex
+++ b/RegionalText/2021/SoG/GeneralObservations.tex
@@ -2,7 +2,7 @@
 \item Late February and early March were subject to strong gale and storm force winds
 which impacted the effectiveness of the assessment program.
 \item Spawn in the Strait of Georgia was observed along a large portion
-of the east coast of Vancouver Island from Willow Point to Piper’s Lagoon and
+of the east coast of Vancouver Island from Willow Point to Piper's Lagoon and
 along the east side of Denman and Hornby Islands.
 \item Additional spawn was reported in Areas 15, 16 and 17 south of Dodd (Bugoyne Bay).
 \item Overall spawn and fishery timing was average to late in 2021.
