--- a/RegionalText/2021/A10/GeneralObservations.tex
+++ b/RegionalText/2021/A10/GeneralObservations.tex
@@ -1,3 +1,5 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+\item Because the DFO dive crew surveyed A10 for one day this year,
+the survey was likely not a complete survey of the spawn in this area.
+\item This data summary does not include spawn survey data collected by GNN.
 \end{itemize}
