--- a/RegionalText/2021/A10/GeneralObservations.tex
+++ b/RegionalText/2021/A10/GeneralObservations.tex
@@ -1,5 +1,6 @@
 \begin{itemize}
 \item Because the DFO dive crew surveyed A10 for one day this year,
 the survey was likely not a complete survey of the spawn in this area.
-\item This data summary does not include spawn survey data collected by GNN.
+\item This data summary does not include spawn survey data collected by the
+Gwa'sala-'Nakwaxda'xw Nation.
 \end{itemize}
