--- a/RegionalText/2021/A27/DataCollectionPrograms.tex
+++ b/RegionalText/2021/A27/DataCollectionPrograms.tex
@@ -1,4 +1,4 @@
-The "Seaveyor" surveyed the area March \nth{14} to March \nth{16}.
+The ``Seaveyor'' surveyed the area March \nth{14} to March \nth{16}.
 Survey effort was concentrated in Section 273, and
 identification of spawning events relied largely on communication
 from local residents to the DFO Resource Manager.
