--- a/RegionalText/2021/A2W/DataCollectionPrograms.tex
+++ b/RegionalText/2021/A2W/DataCollectionPrograms.tex
@@ -1,6 +1,6 @@
-In 2021, biological samples were collected by the "Queens Reach",
+In 2021, biological samples were collected by the ``Queens Reach'',
 a seine test charter vessel funded by DFO.
-The "Queens Reach" collected biological samples from main bodies of herring,
+The ``Queens Reach'' collected biological samples from main bodies of herring,
 identified from soundings.
-The "Atlas" completed an 8 day surface survey charter in Area 2 West from April \nth{5} to \nth{12}.
+The ``Atlas'' completed an 8 day surface survey charter in Area 2 West from April \nth{5} to \nth{12}.
 Both vessels were funded by DFO, through a contract to the Herring Conservation Research Society.
