--- a/RegionalText/2021/CC/GeneralObservations.tex
+++ b/RegionalText/2021/CC/GeneralObservations.tex
@@ -3,19 +3,12 @@
 spawn in different areas and apparent lower amount of spawn in Spiller Channel.
 However, the dive survey indicated only slightly less than observed.
 \item Cold weather, colder surface water temperatures noted.
-\item It is extremely difficult to run a herring program without
-sufficient presence of staff in the field.
-\item It is next to impossible to run an effective herring program
-in Central Coast without reliable communications.
-\item Use of DFO radio network was severely restricted just as herring season started,
-resulting in no communication between gillnet vessels and DFO,
-and very limited communications with the herring test boat.
-\item Satellite phone service is not consistent to rely upon at all times.
-\item The overall quality of the program suffered due to these two issues.
-\item Challenges for 2022:
-\begin{itemize}
-\item Establish new communications methods prior to 2022 season.
-\item Re-establish DFO field presence on management platform,
+\item Continued COVID-19 precautions meant that CC Resource Management staff
+were not able to be on the grounds during the assessment activities.
+\item Reliable communication methods remain a challenge in the Central Coast.
+With satellite phone inconsistencies and the inability to use the DFO radio network,
+there were limited communications with herring test vessels.
+\item Priorities for the 2022 season will be to establish reliable communication methods,
+as well as re-establish DFO Resource Management presence on the management platform, 
 and Heiltsuk/DFO presence on spawn flights.
-\end{itemize}
 \end{itemize}
