--- a/RegionalText/2021/HG/DataCollectionPrograms.tex
+++ b/RegionalText/2021/HG/DataCollectionPrograms.tex
@@ -1,15 +1,15 @@
-In 2021, biological samples were collected by the "Queens Reach",
+In 2021, biological samples were collected by the ``Queens Reach'',
 a seine test charter vessel funded by DFO.
 The primary purpose of the test charter vessel was to collect biological samples
 from main bodies of herring from Haida Gwaii major (priority) and minor stock areas (Area 2W),
 identified from soundings.
-The "Queens Reach" operated a 25 day charter from March \nth{10} to April \nth{6},
+The ``Queens Reach'' operated a 25 day charter from March \nth{10} to April \nth{6},
 collecting samples from HG and Area 2 West.
 It was necessary to make changes to the dive survey program due to COVID-19.
-The "Haida Guardian" was unable to operate the dive charter,
-however the "Victoria Rose" was repurposed from a spawn reconnaissance charter
+The ``Haida Guardian'' was unable to operate the dive charter,
+however the ``Victoria Rose'' was repurposed from a spawn reconnaissance charter
 to a surface survey charter and successfully completed a 19 day charter from April \nth{6} to April \nth{25}.
-The "Haida Guardian" did a 20 day spawn reconnaissance survey to
-provide spawning locations to the "Victoria Rose".
-The "Atlas" completed a 8 day surface survey charter in Area 2 West from April \nth{5} to \nth{12}.
+The ``Haida Guardian'' did a 20 day spawn reconnaissance survey to
+provide spawning locations to the ``Victoria Rose''.
+The ``Atlas'' completed a 8 day surface survey charter in Area 2 West from April \nth{5} to \nth{12}.
 All vessels were funded by DFO, through a contract to the Herring Conservation Research Society.
