--- a/RegionalText/2021/PRD/GeneralObservations.tex
+++ b/RegionalText/2021/PRD/GeneralObservations.tex
@@ -1,5 +1,5 @@
 \begin{itemize}
-\item Continued COVID-19 precautions meant NC Resource Management staff were
+\item Continued COVID-19 precautions meant PRD Resource Management staff were
 not able to be on-grounds during the assessment activities.
 \item High winds and inclement weather throughout the test fishery were a challenge for charter operators.
 \item Large bodies of fish were observed in Kitkatla Inlet, but
