--- a/RegionalText/2021/SoG/DataCollectionPrograms.tex
+++ b/RegionalText/2021/SoG/DataCollectionPrograms.tex
@@ -1,4 +1,4 @@
-Biological samples were collected by the seine charter vessel "Denman Isle"
+Biological samples were collected by the seine charter vessel ``Denman Isle''
 for 27 days from February \nth{20} to March \nth{20}.
 Four additional Industry test vessels collected biological samples
 between February \nth{24} to March \nth{10}.
@@ -12,12 +12,12 @@ Seventeen flights were conducted this season, between February and March.
 
 Four dive charter vessels operated in the SoG:
 \begin{itemize}
-\item The "Viking Spirit" surveyed 21 days from March \nth{16} to April \nth{5},
-\item The "Ocean Cloud" surveyed 12 days from March \nth{15} to March \nth{26},
-\item The "Seaveyor" surveyed 3 days from March \nth{11} and March \nth{13}, and
+\item The ``Viking Spirit'' surveyed 21 days from March \nth{16} to April \nth{5},
+\item The ``Ocean Cloud'' surveyed 12 days from March \nth{15} to March \nth{26},
+\item The ``Seaveyor'' surveyed 3 days from March \nth{11} and March \nth{13}, and
 \item A-Tlegay divers surveyed 5 days from March \nth{10} to April \nth{23}.
 \end{itemize}
-The first three dive vessels and the seine charter vessel "Denman Isle"
+The first three dive vessels and the seine charter vessel ``Denman Isle''
 were funded by DFO, through a contract to the Herring Conservation Research Society.
 DFO mentored A-Tlegay divers for the spawn survey protocol in 2017 and 2019;
 in 2021, A-Tlegay divers surveyed spawn through a contract with the DFO.
