--- a/RegionalText/2021/WCVI/DataCollectionPrograms.tex
+++ b/RegionalText/2021/WCVI/DataCollectionPrograms.tex
@@ -1,4 +1,4 @@
-Biological samples were collected by the seine charter vessel "Proud Canadian"
+Biological samples were collected by the seine charter vessel ``Proud Canadian''
 for 21 days from February \nth{20} to March \nth{12}.
 The primary purpose of the test charter vessel was to collect biological samples from
 main bodies of herring from Statistical Areas 23, 24, and 25.
@@ -12,8 +12,8 @@ Thirteen flights were conducted this season in February and March.
 
 Two dive charter vessels operated in WCVI:
 \begin{itemize}
-\item The "Pachena No.1" surveyed 15 days from March \nth{18} to April \nth{1}, and
-\item The "Seaveyor" surveyed 10 days from March \nth{20} to April \nth{3}.
+\item The ``Pachena No.1'' surveyed 15 days from March \nth{18} to April \nth{1}, and
+\item The ``Seaveyor'' surveyed 10 days from March \nth{20} to April \nth{3}.
 \end{itemize}
 The seine test charter vessel and the dive survey vessels were funded by DFO,
 through a contract to the Herring Conservation Research Society.
